--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ ext.comsatVer       = '0.4.0-SNAPSHOT'
 ext.quasarVer       = '0.6.3-SNAPSHOT'
 ext.jacksonVer      = '2.5.0'
 ext.junitVer        = '4.12'
+ext.asmVer          = '5.0.3'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -33,6 +34,7 @@ configurations.all {
         failOnVersionConflict()
 
         force "org.slf4j:slf4j-api:$slf4jVer"
+        force "org.ow2.asm:asm:$asmVer"
     }
 }
 
@@ -60,6 +62,8 @@ test {
 }
 
 dependencies {
+    compile "co.paralleluniverse:quasar-core:${quasarVer}${classifier}"
+    compile "co.paralleluniverse:quasar-actors:${quasarVer}"
     compile "co.paralleluniverse:comsat-actors-api:$comsatVer"
     compile "co.paralleluniverse:comsat-actors-servlet:$comsatVer"
     compile "co.paralleluniverse:comsat-test-utils:$comsatVer"
