--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,12 @@ ext.slf4jVer        = '1.7.12'
 ext.servletVer      = '3.0.1'
 ext.comsatVer       = '0.4.0-SNAPSHOT'
 ext.quasarVer       = '0.6.3-SNAPSHOT'
-ext.jacksonVer      = '2.5.0'
+ext.jacksonVer      = '2.3.3'
 ext.junitVer        = '4.12'
 ext.asmVer          = '5.0.3'
+ext.jerseyVer       = '2.17'
+ext.httpClientVer   = '4.3.6'
+ext.httpCoreVer     = '4.3.3'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -33,6 +36,13 @@ configurations.all {
     resolutionStrategy {
         failOnVersionConflict()
 
+        force "com.fasterxml.jackson.core:jackson-core:$jacksonVer"
+        force "com.fasterxml.jackson.core:jackson-databind:$jacksonVer"
+        force "com.fasterxml.jackson.core:jackson-annotations:$jacksonVer"
+        force "com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:$jacksonVer"
+        force "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jacksonVer"
+        force "org.apache.httpcomponents:httpclient:$httpClientVer"
+        force "org.apache.httpcomponents:httpcore:$httpCoreVer"
         force "org.slf4j:slf4j-api:$slf4jVer"
         force "org.ow2.asm:asm:$asmVer"
     }
@@ -63,11 +73,19 @@ test {
 
 dependencies {
     compile "co.paralleluniverse:quasar-core:${quasarVer}${classifier}"
-    compile "co.paralleluniverse:quasar-actors:${quasarVer}"
+    compile "co.paralleluniverse:quasar-actors:$quasarVer"
+
+    compile "co.paralleluniverse:comsat-jersey-server:$comsatVer"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVer"
+    compile "co.paralleluniverse:comsat-httpclient:$comsatVer"
+
+    compile "co.paralleluniverse:comsat-actors-api:$comsatVer"
     compile "co.paralleluniverse:comsat-actors-api:$comsatVer"
     compile "co.paralleluniverse:comsat-actors-servlet:$comsatVer"
     compile "co.paralleluniverse:comsat-test-utils:$comsatVer"
+
     compile "org.slf4j:slf4j-api:$slf4jVer"
+
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVer"
 
     provided "javax.servlet:javax.servlet-api:$servletVer"
