:arrow_up: Comsat 0.4.0

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ targetCompatibility = 1.8     // 1.7
 
 ext.slf4jVer        = '1.7.12'
 ext.servletVer      = '3.0.1'
-ext.comsatVer       = '0.4.0-SNAPSHOT'
-ext.quasarVer       = '0.7.1-SNAPSHOT'
+ext.comsatVer       = '0.4.0'
+ext.quasarVer       = '0.7.2'
 ext.jacksonVer      = '2.3.3'
 ext.junitVer        = '4.12'
 ext.asmVer          = '5.0.4'
