--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ ext.httpClientVer   = '4.5'
 ext.httpCoreVer     = '4.4.1'
 ext.jerseyVer       = '2.19'
 
-ext.capsuleVersion  = '1.0-rc2-SNAPSHOT'
+ext.capsuleVersion  = '1.0.1-SNAPSHOT'
+ext.capsuleMavenVersion  = '1.0'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
@@ -105,7 +106,7 @@ dependencies {
     runtime "org.slf4j:slf4j-simple:$slf4jVer"
 
 	capsule "co.paralleluniverse:capsule:$capsuleVersion"
-	capsuleMaven "co.paralleluniverse:capsule-maven:$capsuleVersion"
+	capsuleMaven "co.paralleluniverse:capsule-maven:$capsuleMavenVersion"
 
 	testCompile "junit:junit:$junitVer"
 }
