--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,8 @@ dependencies {
     compile "co.paralleluniverse:comsat-actors-servlet:$comsatVer"
     compile "co.paralleluniverse:comsat-test-utils:$comsatVer"
 
+    compile "org.eclipse.jetty:jetty-jmx:9.2.13.v20150730"
+
     compile "org.slf4j:slf4j-api:$slf4jVer"
 
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVer"
