--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to Appender1.
-log4j.rootLogger=INFO, Appender1
+log4j.rootLogger=DEBUG, Appender1
 
 # Appender1 is set to be a ConsoleAppender.
 log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
@@ -7,4 +7,4 @@ log4j.appender.Appender2=org.apache.log4j.ConsoleAppender
 
 # Appender1 uses PatternLayout.
 log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
-log4j.appender.Appender1.layout.ConversionPattern=%-4r [%X{hostname}] [%t] %-5p %c %x - %m%n
+log4j.appender.Appender1.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
