--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to Appender1.
-log4j.rootLogger=DEBUG, Appender1
+log4j.rootLogger=INFO, Appender1
 
 # Appender1 is set to be a ConsoleAppender.
 log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
