--- a/build.gradle
+++ b/build.gradle
@@ -290,9 +290,13 @@ task shieldEmbeddedFatCapsule(type: Jar, dependsOn: jar) {
     }
 }
 
+run {
+    // systemProperty 'co.paralleluniverse.fibers.verifyInstrumentation', 'true'
+    // systemProperty 'co.paralleluniverse.fibers.detectRunawayFibers', 'false'
+}
+
 applicationDefaultJvmArgs = [
-    "-javaagent:${configurations.quasar.singleFile}",
-    "-Dco.paralleluniverse.fibers.verifyInstrumentation=true"
+    "-javaagent:${configurations.quasar.singleFile}"
 ]
 
 defaultTasks 'capsule'
