--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext.httpClientVer   = '4.5'
 ext.httpCoreVer     = '4.4.1'
 ext.jerseyVer       = '2.19'
 
-ext.capsuleVersion  = '1.0.1-SNAPSHOT'
+ext.capsuleVersion  = '1.0.2-SNAPSHOT'
 ext.capsuleMavenVersion  = '1.0'
 ext.capsuleShieldVersion  = '0.2.0-SNAPSHOT'
 
@@ -125,6 +125,11 @@ def getDependencies(config) {
 		}
 		return res
 	}
+}
+
+run {
+    // systemProperty 'co.paralleluniverse.fibers.verifyInstrumentation', 'true'
+    systemProperty 'co.paralleluniverse.fibers.detectRunawayFibers', 'false'
 }
 
 task thinCapsule(type: Jar, dependsOn: classes) {
@@ -288,11 +293,6 @@ task shieldEmbeddedFatCapsule(type: Jar, dependsOn: jar) {
             'Caplets': 'co.paralleluniverse:capsule-shield:0.2.0-SNAPSHOT'
         )
     }
-}
-
-run {
-    // systemProperty 'co.paralleluniverse.fibers.verifyInstrumentation', 'true'
-    // systemProperty 'co.paralleluniverse.fibers.detectRunawayFibers', 'false'
 }
 
 applicationDefaultJvmArgs = [
